# tree-sitter-bp

./: .gitattributes  .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.woodpecker/: check.yml
bindings/c/: tree-sitter-bp.h  tree-sitter-bp.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_bp/: __init__.py  binding.c
bindings/rust/: lib.rs
queries/: highlights.scm
scripts/: minimal_init.lua
src/: grammar.json  node-types.json  parser.c
test/: indent_spec.lua
test/corpus/: comments.txt  definitions.txt  expressions.txt  literals.txt  modules.txt  select.txt
test/highlight/: builtins.bp  comments.bp  identifiers.bp  litterals.bp  modules.bp  operators.bp  properties.bp  punctuation.bp  select.bp
test/indent/: expressions.bp  select.bp
